@@ -1,0 +1,138 @@
+package com.planet_ink.coffee_mud.Abilities.Archon;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2007-2017 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
+
+public class Archon_Infect extends ArchonSkill
+{
+	@Override
+	public String ID()
+	{
+		return "Archon_Infect";
+	}
+
+	private final static String localizedName = CMLib.lang().L("Infect");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	@Override
+	protected int canAffectCode()
+	{
+		return 0;
+	}
+
+	@Override
+	protected int canTargetCode()
+	{
+		return CAN_MOBS;
+	}
+
+	@Override
+	public int abstractQuality()
+	{
+		return Ability.QUALITY_MALICIOUS;
+	}
+
+	private static final String[] triggerStrings = I(new String[] { "INFECT" });
+
+	@Override
+	public String[] triggerStrings()
+	{
+		return triggerStrings;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_SKILL | Ability.DOMAIN_ARCHON;
+	}
+
+	@Override
+	public int maxRange()
+	{
+		return adjustedMaxInvokerRange(1);
+	}
+
+	@Override
+	public int usageType()
+	{
+		return USAGE_MOVEMENT;
+	}
+
+	@Override
+	public boolean invoke(MOB mob, List<String> commands, Physical givenTarget, boolean auto, int asLevel)
+	{
+		if(commands.size()<2)
+		{
+			mob.tell(L("Infect whom with what?"));
+			return false;
+		}
+		final List<String> whom=new XVector<String>(commands.remove(0));
+		MOB target=CMLib.players().getPlayer(whom.get(0));
+		if((target==null)||(target.isMonster())||(!target.isPlayer())||(!CMLib.flags().isInTheGame(target, true)))
+			target=getTargetAnywhere(mob,whom,givenTarget,false,true,true);
+		if(target==null)
+			return false;
+
+		final Ability A=CMClass.findAbility(CMParms.combine(commands));
+		if(!(A instanceof DiseaseAffect))
+		{
+			mob.tell(L("You don't know of any disease called @x1.",CMParms.combine(commands)));
+			return false;
+		}
+		
+		if(!super.invoke(mob,commands,givenTarget,auto,asLevel))
+			return false;
+
+		final boolean success=proficiencyCheck(mob,0,auto);
+
+		if(success)
+		{
+			final CMMsg msg=CMClass.getMsg(mob,target,this,CMMsg.MASK_MOVE|CMMsg.TYP_JUSTICE|(auto?CMMsg.MASK_ALWAYS:0),auto?L("A disease cloud surrounds <T-NAME>!"):L("^F<S-NAME> infect(s) <T-NAMESELF>.^?"));
+			CMLib.color().fixSourceFightColor(msg);
+			if(mob.location().okMessage(mob,msg))
+			{
+				mob.location().send(mob,msg);
+				A.invoke(mob, target, auto, asLevel);
+			}
+		}
+		else
+			return beneficialVisualFizzle(mob,target,L("<S-NAME> attempt(s) to infect <T-NAMESELF>, but fail(s)."));
+		return success;
+	}
+}
