@@ -79,6 +79,7 @@ public class FaithHelper extends StdBehavior
 		&&(observer.getWorshipCharID().length()>0)
 		&&(CMLib.flags().canBeSeenBy(source,observer))
 		&&(CMLib.flags().canBeSeenBy(target,observer))
+		&&((!(msg.tool() instanceof DiseaseAffect))||(((DiseaseAffect)msg.tool()).isMalicious()))
 		&&(!BrotherHelper.isBrother(source,observer,false)))
 		{
 			if(observer.getWorshipCharID().equalsIgnoreCase(target.getWorshipCharID()))
