@@ -250,6 +250,12 @@ Example  : stinkify gunther\n\r\
 From anywhere on the map, the player with this skill can cause the target to become 1 level \
 stinkier than they were before.  
 
+INFECT=<ABILITY>\
+Usage    : INFECT [PLAYER/MOB NAME] [DISEASE NAME]\n\r\
+Example  : stinkify gunther flu\n\r\
+The player with this skill can cause the target to become infected \
+with a given disease.
+
 INJURE=<ABILITY>\
 Usage    : INJURE [PLAYER NAME] [body part]\n\r\
 Example  : injure gunther left hand\n\r\
